# polyquant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CREDENTIALS.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  polyquant  pyproject.toml  requirements-dev.txt  requirements.txt  wallets_to_watch.txt
.github/workflows/: ci.yml
backtest/: leakage_checker.py  metrics.py  walk_forward.py
bot/: main.py  telegram_bot.py
config/: __init__.py  btc_markets.json  settings.py
control/: kill_switch.py
data/: collector_binance.py  collector_coinbase.py  collector_polymarket.py  sentiment_collector.py  wallet_tracker.py
execution/: clob_client.py  order_manager.py  verify_polymarket_cli.py
execution/providers/: __init__.py  base.py  clob.py  polymarket_cli.py  polymarket_cli_provider.py
features/: feature_builder.py  garch_engine.py  label_builder.py  sentiment_features.py
learning/: __init__.py  retrain.py  trade_to_training.py
models/: calibration_model.py  ev_filter.py  kelly_sizer.py  llm_reasoner.py
observers/: __init__.py  strategy_observer.py
paper_trading/: blotter.py  engine.py  learner.py  persistence.py  utils.py
research/: __init__.py  cli_wrapper.py
research/backtest/: leakage_checker.py
research/data/: kaggle_loader.py
runtime/: __init__.py  context.py  logging_setup.py  orchestrator.py  state_store.py
scripts/: awal_bootstrap.py  find_btc_markets.py  polyquant
services/: __init__.py  base.py  data.py  supervisor.py  telegram.py  telegram_formatters.py  trading.py  web.py
systemd/: polyquant.service
wallets/: agentkit_base.py  allowance_setup.py  doctor_awal.py  funding_flow.py  wallet_manager.py
wallets/providers/: __init__.py  base.py  clob_wallet.py  coinbase_agentic.py  coinbase_awal.py  mock_wallet.py
web/: app.py  run.py
web/frontend/: README.md  charts.html  package-lock.json  vite.config.js
web/frontend/src/: charts-embed.css  charts-entry.jsx
web/frontend/src/components/: ChartsRow.jsx  EquityChart.jsx  TradingViewWidget.jsx
web/static/: app.js  charts.html  index.html  style.css
web/static/assets/: charts.css  charts.js
