[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polymarket-btc-bot"
version = "0.1.0"
description = "Production-grade Polymarket BTC 5-minute prediction market trading bot"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Polyquant" }]

[project.scripts]
polybot = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "features*", "models*", "backtest*", "wallets*", "execution*", "control*", "config*"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in default args (common in FastAPI/Pydantic)
]

[tool.ruff.lint.isort]
known-first-party = ["data", "features", "models", "backtest", "wallets", "execution", "control", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring live network access",
    "wallet: marks tests requiring a funded wallet",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "scripts/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 60

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
